files/blue/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tomcat-blue
  name: tomcat-blue-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector: 
    app: tomcat-blue
  type: LoadBalancer
