files/blue/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
spec:
  rules:
  - host: apavarnitsyn-app.k8s.playpit.by
    http:
      paths:
      - path: /hello/
        backend:
          serviceName: tomcat-blue-svc
          servicePort: 8080
